# moldau

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: check-npm-keys.sh
.github/workflows/: build.yml  check-npm-keys.yml  check.yml  release.yml
nix/: package.nix  static.nix
src/: dirs.rs  http.rs  main.rs
src/actions/: clean.rs  exec.rs  fetch.rs  mod.rs  prepare.rs  shims.rs  use_.rs
src/models/: mod.rs  npm.rs  package.rs  spec.rs
src/util/: download.rs  exit_code.rs  exit_code_error.rs  log_display.rs  mod.rs
