# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "moldau"
version = "0.1.0"
edition = "2024"

description = "Modern version manager for Node.js package managers"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ryanccn/moldau"
repository = "https://github.com/ryanccn/moldau.git"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.35", features = ["derive", "string"] }
clap_complete = "4.5.47"
color-eyre = { version = "0.6.3", default-features = false }
env_logger = "0.11.8"
etcetera = "0.10.0"
eyre = "0.6.12"
flate2 = "1.1.1"
hex = "0.4.3"
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
log = "0.4.27"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "json", "deflate", "gzip", "brotli", "zstd"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sha1-checked = "0.10.0"
sha2 = "0.10.8"
tar = "0.4.44"
tempdir = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
which = "7.0.2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
