# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "moldau"
version = "0.1.5"
edition = "2024"

description = "Modern version manager for Node.js package managers"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ryanccn/moldau"
repository = "https://github.com/ryanccn/moldau.git"

[dependencies]
anstream = "0.6.21"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive", "string"] }
clap_complete = "4.5.65"
color-eyre = { version = "0.6.5", default-features = false }
env_logger = "0.11.8"
etcetera = "0.11.0"
eyre = "0.6.12"
flate2 = "1.1.8"
hex = "0.4.3"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
log = "0.4.29"
owo-colors = { version = "4.2.3" }
p256 = "0.13.2"
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "json", "deflate", "gzip", "brotli", "zstd"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha1-checked = "0.10.0"
sha2 = "0.10.9"
tar = "0.4.44"
tempdir = "0.3.7"
tokio = { version = "1.49.0", features = ["full"] }
which = "8.0.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
